--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
       name="trustech-domain-verification"
       content="ed68e91a-9d2a-4182-ab2a-6f18f7805c0f"
     />
-    <script src="https://local.functions.local.nhost.run/v1/injector?org_id=8af13671-40b6-4452-b7e0-e0f0c86c77a7"></script>
+    <script src="https://local.functions.local.nhost.run/v1/cookies/injector?org_id=8af13671-40b6-4452-b7e0-e0f0c86c77a7"></script>
   </head>
   <body>
     <header>
